bundled_metadata/force-app/main/default/objects/Feature_Definition_Item__c/Feature_Definition_Item__c.object-meta.xml
<CustomObject>
    <label>Feature Definition Item</label>
    <nameField>
        <displayFormat>FDI-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Definition Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>