bundled_metadata/force-app/main/default/objects/Feature_Definition_Item__c/fields/Context_Field_Actual__c.field-meta.xml
<CustomField>
    <fullName>Context_Field_Actual__c</fullName>
    <label>Context Field Actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>