bundled_metadata/force-app/main/default/objects/Feature_Definition_Item__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>140</length>
    <type>Text</type>
</CustomField>