bundled_metadata/force-app/main/default/objects/Feature_Definition_Item__c/fields/Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Item_Id__c</fullName>
    <label>Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>