bundled_metadata/force-app/main/default/objects/Feature_Definition_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Context_Field_Actual__c</columns>
    <columns>Context_Field_Target__c</columns>
    <columns>Item_Description__c</columns>
    <columns>Feature_Id__c</columns>
    <columns>Item_Id__c</columns>
    <columns>Active__c</columns>
    <columns>Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>